--- a/amplify.yml
+++ b/amplify.yml
@@ -3,17 +3,32 @@ frontend:
   phases:
     preBuild:
       commands:
+        # --- Node を 20 に固定 ---
         - nvm install 20
         - nvm use 20
         - node -v
+        - npm -v
+        # --- 依存インストール（キャッシュ活用）---
         - npm ci --cache .npm --prefer-offline
+        # --- VITE_ 環境変数のキー名だけ確認（値は出さない）---
+        - echo "== VITE_* environment keys =="
+        - /bin/bash -lc 'env | grep "^VITE_" | cut -d"=" -f1 || true'
     build:
       commands:
         - npm run build
+    postBuild:
+      commands:
+        # 成果物の中身を確認用に出力（トラブルシュート用）
+        - echo "== dist contents =="
+        - ls -la dist || true
+        # 簡易ヘルスチェック（配信確認用）
+        - echo "ok" > dist/health.txt
+
   artifacts:
     baseDirectory: dist
     files:
       - '**/*'
+
   cache:
     paths:
       - .npm/**/*
