Initial commit with project files only

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Node.js
+node_modules/
+dist/
+build/
+
+# Amplify
+.amplify
+amplify_outputs*
+amplifyconfiguration*
+
+# macOS
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -7,19 +20,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
-*.sln
+*.sln*
 *.sw?
 .env
+
+# Local build files
+dist-ssr
+*.local
+
