--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth0/auth0-react": "^2.3.0",
     "@stripe/stripe-js": "^7.5.0",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "aws-amplify": "^6.15.5",
     "ci-info": "^4.3.0",
     "framer-motion": "^12.23.3",
     "i18next": "^25.3.2",
@@ -27,12 +28,16 @@
     "stripe": "^18.3.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "esbuild": "^0.25.8",
+    "aws-cdk-lib": "^2.204.0",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.9",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -43,7 +48,8 @@
     "serverless-s3-sync": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "terser": "^5.43.1",
-    "typescript": "^5.5.3",
+    "tsx": "^4.20.4",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^7.1.0"
   }
